--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "typecheck": "tsc --noEmit",
-    "test": "vitest"
+    "test": "vitest",
+    "clean": "rimraf node_modules package-lock.json && npm cache clean --force"
   },
   "dependencies": {
     "@react-three/drei": "^10.7.5",
