--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
+    "typecheck": "echo 'no typecheck'",
     "preview": "vite preview",
     "test": "node --test",
     "clean": "rimraf node_modules package-lock.json && npm cache clean --force"
